--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["*://jwts.hit.edu.cn/*"],
             "js": ["./contents/content.js"]
         }
     ],
